5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1679_1107.log
== SUBMITION (2019-07-09 11:09:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("Dia da semana:	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro:	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "domingo"
	elif(X==1):
		X = "segunda"
	elif(X==2):
		X = "terca"
	elif(X==3):
		X = "quarta"
	elif(X==4):2

		X = "quinta"
	elif(X==5):
		X = "sexta"
	elif(X==6):
		X = "sabado"
	
	if(dia == 0):
		dia = "domingo"
	elif(dia==1):
		dia = "segunda"
	elif(dia==2):
		dia = "terca"
	elif(dia==3):
		dia = "quarta"
	elif(dia==4):
		dia = "quinta"
	elif(dia==5):
		dia = "sexta"
	elif(dia==6):
		dia = "sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)
-- EXECUTION TIME:
0.64089
-- ERROR:
  File "/home/codebench/codes/1679/1107/main.py", line 25
    X = "quinta"
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:10:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("Dia da semana	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "domingo"
	elif(X==1):
		X = "segunda"
	elif(X==2):
		X = "terca"
	elif(X==3):
		X = "quarta"
	elif(X==4):2

		X = "quinta"
	elif(X==5):
		X = "sexta"
	elif(X==6):
		X = "sabado"
	
	if(dia == 0):
		dia = "domingo"
	elif(dia==1):
		dia = "segunda"
	elif(dia==2):
		dia = "terca"
	elif(dia==3):
		dia = "quarta"
	elif(dia==4):
		dia = "quinta"
	elif(dia==5):
		dia = "sexta"
	elif(dia==6):
		dia = "sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)
-- ERROR:
File "XXXX", line 25
    X = "quinta"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("Dia da semana	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "domingo"
	elif(X==1):
		X = "segunda"
	elif(X==2):
		X = "terca"
	elif(X==3):
		X = "quarta"
	elif(X==4):2
		X = "quinta"
	elif(X==5):
		X = "sexta"
	elif(X==6):
		X = "sabado"
	
	if(dia == 0):
		dia = "domingo"
	elif(dia==1):
		dia = "segunda"
	elif(dia==2):
		dia = "terca"
	elif(dia==3):
		dia = "quarta"
	elif(dia==4):
		dia = "quinta"
	elif(dia==5):
		dia = "sexta"
	elif(dia==6):
		dia = "sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)
-- ERROR:
File "XXXX", line 24
    X = "quinta"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("Dia da semana	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "domingo"
	elif(X==1):
		X = "segunda"
	elif(X==2):
		X = "terca"
	elif(X==3):
		X = "quarta"
	elif(X==4):
		X = "quinta"
	elif(X==5):
		X = "sexta"
	elif(X==6):
		X = "sabado"
	
	if(dia == 0):
		dia = "domingo"
	elif(dia==1):
		dia = "segunda"
	elif(dia==2):
		dia = "terca"
	elif(dia==3):
		dia = "quarta"
	elif(dia==4):
		dia = "quinta"
	elif(dia==5):
		dia = "sexta"
	elif(dia==6):
		dia = "sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:11:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("Dia da semana	"))

if(dia<0 or dia>6):
	print("A entrada",dia,"eh invalida")
else:
	fut = int(input("Dias no futuro	"))
	if(dia+fut>6):
		X = (dia+fut)%7
	else:
		X = dia+fut

	if(X==0):
		X = "domingo"
	elif(X==1):
		X = "segunda"
	elif(X==2):
		X = "terca"
	elif(X==3):
		X = "quarta"
	elif(X==4):
		X = "quinta"
	elif(X==5):
		X = "sexta"
	elif(X==6):
		X = "sabado"
	
	if(dia == 0):
		dia = "domingo"
	elif(dia==1):
		dia = "segunda"
	elif(dia==2):
		dia = "terca"
	elif(dia==3):
		dia = "quarta"
	elif(dia==4):
		dia = "quinta"
	elif(dia==5):
		dia = "sexta"
	elif(dia==6):
		dia = "sabado"
		
	print("Hoje eh",dia,"e o dia futuro eh",X)
-- EXECUTION TIME:
0.717186
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
